@@ -1,3 +1,8 @@
+2013-03-05  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/SNMPServer.pm: Added an option to start the snmptrapd
+	  daemon manually.
+
 2013-03-05  Sergio Martin <sergio.martin@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Add the new fields on snmp alerts
